Optimizing About page.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title:
+title: Andrey Chauzov
 first_name: Andrey
 middle_name:
 last_name: Chauzov
